# FManager

./: .gitignore  CMakeLists.txt  README.md  auth.c  auth.h  finance.c  finance.h  finance.sqbpro  main.c  settings.c  settings.h  sha256.c  sha256.h  utils.c  utils.h
